# pixi-diff

./: .gitattributes  Cargo.toml  LICENSE  README.md  SECURITY.md  pixi.toml
.github/: dependabot.yml
.github/assets/demo/: demo-dark.tape  demo-light.tape
.github/workflows/: build.yml  chore.yml  ci.yml
patches/reqwest_middleware_shim/: Cargo.toml
src/: lib.rs  main.rs
tests/: integration_test.rs
tests/resources/: diff.json  pixi.lock.new  pixi.lock.old
