[package]
name = "pixi-diff-cli"
description = "Generate JSON diffs between pixi lockfiles"
version = "0.1.7"
edition = "2024"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.19", features = [
  "default",
  "env-filter",
] }
miette = "7.6.0"
clap = { version = "4.6.1", features = ["derive", "string"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
serde_json = "1.0.150"
rattler_lock = { version = "0.31", default-features = false }
pixi_core = { git = "https://github.com/prefix-dev/pixi", tag = "v0.72.0" }
pixi_diff = { git = "https://github.com/prefix-dev/pixi", tag = "v0.72.0" }
pixi_manifest = { git = "https://github.com/prefix-dev/pixi", tag = "v0.72.0", features = [
  "rattler_lock",
] }

[[bin]]
name = "pixi-diff"
path = "src/main.rs"

[patch.crates-io]
# Remove this hack once https://github.com/prefix-dev/pixi/blob/v0.72.0/patches/reqwest_middleware_shim/Cargo.toml is gone
reqwest-middleware = { path = "patches/reqwest_middleware_shim" }
version-ranges = { git = "https://github.com/astral-sh/pubgrub", rev = "d8efd77673c9a90792da9da31b6c0da7ea8a324b" }
